Errors resizing table fixed by changing table spacing and error width

--- a/brevets/static/css/calc.css
+++ b/brevets/static/css/calc.css
@@ -11,8 +11,9 @@
 } */
 
 .notes { 
-    height: 40px; 
-    min-width: 300px; 
+    height: 70px; 
+    min-width: 200px; 
+    /* min-width: 300px;  */
     color: red; 
 } 
 
